--- a/principal.css
+++ b/principal.css
@@ -82,6 +82,7 @@ body {
         }
 
         .box1,.box2,.box3,.box4,.box5,.box6 {
+            color:black;
             background: #fffdfd;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
@@ -117,35 +118,6 @@ body {
         .navegador:hover {
             transform: scale(1.1);
             transition:  transform 0.3s;
-        }
-        
-        
-        .container .box1{
-            background-image: image-set(url(../Imagenes/FondoAV.jpg));
-            background-size: cover;
-            filter: contrast(40%);          
-        }
-        .box2{
-            background-image: image-set(url(../Imagenes/cs.png));
-            background-size: cover;
-            background-position-x:-40px;
-            filter: contrast(40%);
-        }
-        .box3{
-            background-image: image-set(url(../Imagenes/wow.png)); background-size: cover;
-            filter: contrast(40%)
-        }
-        .box4{
-            background-image: image-set(url(../Imagenes/fc25.png)); background-size: cover;
-            filter: contrast(40%);
-        }
-        .box5{
-            background-image: image-set(url(../Imagenes/aoe.png)); background-size: cover; background-position-x:-25px ;
-            filter: contrast(40%);
-        }
-        .box6{
-            background-image: image-set(url(../Imagenes/out.png)); background-size: cover;
-            filter: contrast(40%);
         }
 
 
