--- a/principal.css
+++ b/principal.css
@@ -40,6 +40,7 @@ body {
             font-weight: 800;
         }
         p{
+            color:black
             font-size: large;
         }
         h2{
