--- a/principal.css
+++ b/principal.css
@@ -121,7 +121,7 @@ body {
             transition:  transform 0.3s;
         }
      .box1{
-            background-image: image-set(url(Imagenes/FondoAV.jpg));
+            background-image: image-set(url(Imagenes/got1.png));
             background-size: cover;
             filter: contrast(40%);          
         }
